scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/AssrtCoreTest09.scr
module good.extensions.assrtcore.safety.assrtprog.AssrtCoreTest09;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)
{
	1(x:int) from A to B; @"(x=1)"
	2(y:int) from A to B; @"((y=2) && (y=(x+1)))"
	3(z:int) from A to B; @"((z=3) && (z=(y+1)))"
	// ... can "manually unroll" forever
}
//*/
