scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/assrtprog/AssrtCoreTest27.scr
module bad.extensions.assrtcore.safety.assrtprog.AssrtCoreTest27;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B) @"<x:=1> x>=1"
{
	1() from A to B; @"(x<3)"
	do Proto1(A, B); @"<(x+1)>"  // CHECKME: DbC two-unfolding -- is this OK in DbC? maybe, because of hacked var substitution?
}
//*/
